fixed h1 p text alignment

--- a/style.css
+++ b/style.css
@@ -32,7 +32,9 @@ h1, p {
     color: #777;
     background: #ebebeb;
     margin: 5%;
-    height: 30%;
+    height: 10%;
+    text-align: center;
+    padding: 20px;
 }
 
 section {
@@ -52,4 +54,4 @@ aside {
 footer {
     clear: both;
     overflow: auto;
-}
+}                                                       
